--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class= "header">
             <img class="logo" src="image/w" alt="logo">
             <ul class="header-text">
-                <li><a href="https://issuu.com/winson2623/docs/winston_portfolio_issuu_bd0b98e77c24d4" target="blank"> Homepage</a></li>
-                <li><a href="https://issuu.com/winson2623/docs/winston_portfolio_issuu_bd0b98e77c24d4" target="blank"> About</a></li>
-                <li><a href="https://issuu.com/winson2623/docs/winston_portfolio_issuu_bd0b98e77c24d4" target="blank"> Works</a></li>
+                <li><a href="https://google.com" target="blank"> Homepage</a></li>
+                <li><a href="https://google.com" target="blank"> About</a></li>
+                <li><a href="https://google.com" target="blank"> Works</a></li>
             </ul>
         </div>
     </div>
